Added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,46 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content to the user</li>
+          <li> The body can be structured with semantic element such as header, main and footer</li>
+          <li> attributes qualifies elements</li>
+          <li>Elements are often assimilated with tags however they are slightly different</li>
+        </ul>
+
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+
+      </section>
+      <section class="card" id="git-section">
+        <h2>GIT</h2>
+        <ul>
+          <li>git status:check which branch you are currently in</li>
+          <li>git checkout -b branch-name:Creates a new branch and switches to it</li>
+          <li>git clone "git hub repository ssh": Clone a git hub repository on local directory</li>
+          <li>git checkout branch: Switch to branch</li>
+          <li>git status: Check which branch you are in</li>
+          <li>git add -A : Stage changes before commit</li>
+          <li>git commit -m "name of change": Commit changes</li>
+          <li>git pull origin main: Pull latest version of github repository on local directory</li>
+
+        </ul>
+
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>Enter your javascript notes here</li>
+        </ul>
+
+      </section><!-- Student code goes here -->
     </main>
 
     <footer>
