add javascript code

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
   </head>
   <body>
     <header id="top">
+
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
+
     </header>
     <main>
       <section class="card" id="html-section">
+
         <h2>HTML</h2>
+
         <ul>
           <li>The head element contains information about the webpage</li>
           <li>The body element represents the visible content to the user</li>
@@ -24,9 +29,13 @@
         </ul>
 
       </section>
+
       <section class="card" id="css-section">
+
         <h2>CSS</h2>
+
         <ul>
+
           <li>A margin indicates how much space we want around the outside of an element</li>
           <li>A padding indicates how much space we want around the content inside an element</li>
           <li> we can use inline CSS, Internal Style Sheet or External Style Sheet</li>
@@ -37,12 +46,17 @@
           <li> CSS is built with selector, property and value</li>
           <li> DRY code: Do Not Repeat Yourself: Use comma to apply CSS to multiple selectors</li>
           <li> CSS attributes: Class and id</li>
+
         </ul>
 
       </section>
+
       <section class="card" id="git-section">
+
         <h2>GIT</h2>
+
         <ul>
+
           <li>git status:check which branch you are currently in</li>
           <li>git checkout -b branch-name:Creates a new branch and switches to it</li>
           <li>git clone "git hub repository ssh": Clone a git hub repository on local directory</li>
@@ -51,21 +65,37 @@
           <li>git add -A : Stage changes before commit</li>
           <li>git commit -m "name of change": Commit changes</li>
           <li>git pull origin main: Pull latest version of github repository on local directory</li>
+          <li> git push origin branch name: Push Branch changes to Github Branch for merger to main</li>
+          <li>start ssh agent in background: eval "$(ssh-agent -s)"</li>
+          <li>add private key to ssh agent: ssh-add ~/.ssh/id_25519</li>
 
         </ul>
 
       </section>
+
       <section class="card" id="javascript-section">
+
         <h2>Javascript</h2>
+
         <ul>
-          <li>Enter your javascript notes here</li>
+          
+          <li>Use var to declare a variable</li>
+          <li>Enter the name of the variable after var and assign specific data to be stored in the variable with = "name of specific data";</li>
+          <li> = is an assignement operator</li>
+          <li> The specific data assigned to a variable is called a string</li>
+          <li>Once it is written, we connect the script to HTML by using the tag "script" in the HTML body</li>
+          <li> === is called a strict equality operator</li>
+
         </ul>
 
       </section><!-- Student code goes here -->
     </main>
 
     <footer>
-      <p>I can code!</p>
+          <p>I can code!</p>
     </footer>
+
+    <script src="./assets/script.js"></script>
+
   </body>
 </html>
