add javascript code

--- a/index.html
+++ b/index.html
@@ -75,16 +75,22 @@
 
       <section class="card" id="javascript-section">
 
-        <h2>Javascript</h2>
+        <h2>JavaScript</h2>
 
         <ul>
           
-          <li>Use var to declare a variable</li>
+          <li>Use var to declare a new variable</li>
           <li>Enter the name of the variable after var and assign specific data to be stored in the variable with = "name of specific data";</li>
           <li> = is an assignement operator</li>
           <li> The specific data assigned to a variable is called a string</li>
           <li>Once it is written, we connect the script to HTML by using the tag "script" in the HTML body</li>
           <li> === is called a strict equality operator</li>
+          <li>Conditional statement : if(){}....else if(){}....else(){}</li>
+          <li> For Loop : for ( var x=0; x < variablename.length; x++){method variablename[x]}</li>
+          <li>Functions do not automatically execute but need to be called by name to be executed</li>
+          <li>function name() {}</li>
+          <li>Functions need to be called at the bottom of the script to be executed</li>
+          <li>Order is important as Javascript functions are executed from Top to Bottom (Control Flow)</li>
 
         </ul>
 
