update content in javascript section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <li>git pull origin main: Pull latest version of github repository on local directory</li>
           <li> git push origin branch name: Push Branch changes to Github Branch for merger to main</li>
           <li>start ssh agent in background: eval "$(ssh-agent -s)"</li>
-          <li>add private key to ssh agent: ssh-add ~/.ssh/id_25519</li>
+          <li>add private key to ssh agent: ssh-add ~/.ssh/id_ed25519</li>
 
         </ul>
 
